/ ‘tests/index.html’

--- a/tests/index.html
+++ b/tests/index.html
@@ -119,7 +119,7 @@ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
 
     <!-- 8/12 and 4/12 layout -->
 
-		<div class="grid grid-pad">
+		<div contenteditable="true" class="grid grid-pad">
 
 				<div class="col-1-2">
 						<span class="lable">{{ site.family_name }}-{{ site.family_weight_1 }} 10px</span>
@@ -146,7 +146,7 @@ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
 				</div>
 
 
-				<div class="col-1-2">
+				<div contenteditable="true" class="col-1-2">
 				    <span class="lable">{{ site.family_name }}-{{ site.family_weight_1 }} 10px</span>
 				    <p  style="font-weight:300;font-size:10px;">
 				      {{ site.string_latin }}
@@ -173,7 +173,7 @@ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
 		</div>
 
 
-		<div class="grid grid-pad">
+		<div contenteditable="true" class="grid grid-pad">
 
 				<div class="col-1-2">
 						<span class="lable">{{ site.family_name }}-{{ site.family_weight_1 }} 10px</span>
@@ -200,7 +200,7 @@ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
 				</div>
 
 
-				<div class="col-1-2">
+				<div contenteditable="true" class="col-1-2">
 				    <span class="lable">{{ site.family_name }}-{{ site.family_weight_1 }} 10px</span>
 				    <p  style="font-weight:700;font-size:10px;">
 				      {{ site.string_latin }}
