--- a/tests/index.html
+++ b/tests/index.html
@@ -43,6 +43,7 @@ layout: project_site
 	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}-{{ site.family_weight_2 }}.otf');font-style:   normal; font-weight:  700;}
 	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}-{{ site.family_weight_3 }}.otf');font-style:   normal; font-weight:  900;}
 	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}-{{ site.family_style }}.otf');font-style:   italic; font-weight:  400;}
+	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/StickNoBills-Bold.otf'); font-weight:  900;}
 
 body{font-family: 'Source Code Pro';}
 	p { font-family: '{{ site.family_name }}', AdobeBlank; font-size: 36px;}
@@ -106,6 +107,21 @@ body{font-family: 'Source Code Pro';}
 අ ආ ඇ ඈ ඉ ඊ උ ඌ ඍ ඎ ඏ ඐ එ ඒ ඓ ඔ ඕ ඖ ක ඛ ග ඝ ඞ ඟ ච ඡ ජ ඣ ඤ ඥ ඦ ට ඨ ඩ ඪ ණ ඬ ත ථ ද ධ න ඳ ප ඵ බ භ ම ඹ ය ර ල ව ශ ෂ ස හ ළ ෆ ෴
 ෛ ෙ ා ෘ ු ූ ැ ෑ ෟ ි ී
 
+0 1 2 3 4 5 6 7 8 9
+
+( { [ . , ¡ ! ¿ ? * ' ‘ ’ " “ ” ] } )
+
+$ € £ % @ & ¶ § ¢ † ‡
+abcdefghijklmnopqrstuvwxyz
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+</p>
+
+
+<span class="lable">{{ site.family_name }}-{{ site.family_weight_2 }} 70px</span>
+
+<p class="alphabet" style="font-weight:700;">
+
+அன்பென்ற அழகிய உணர்வின் அற்புதங்களை அனுபவித்தல் சுகமானது. இதுதான் வாழ்வின் ஆனந்தமான தருணங்களின் தோற்றுவாய். ஒவ்வொரு தினமும் அன்பென்பதை ஆராதிப்போம். வாருங்கள். சேருங்கள்.
 0 1 2 3 4 5 6 7 8 9
 
 ( { [ . , ¡ ! ¿ ? * ' ‘ ’ " “ ” ] } )
