/ ‘_site/tests/index.html’ / ‘tests/index.html’

--- a/tests/index.html
+++ b/tests/index.html
@@ -45,6 +45,7 @@ layout: project_site
 	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}Sinhala-Light.otf');font-style:   normal; font-weight:  300;}
 	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}Sinhala-Bold.otf');font-style:   normal; font-weight:  700;}
 	@font-face {font-family:'{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}-Light.otf'); font-style: normal; font-weight:  300;}
+	@font-face {font-family: '{{ site.family_name }}'; src: url('./fonts/{{ site.family_name }}-Bold.otf');font-style:   normal; font-weight:  700;}
 
 
 
